juniper-from-schema/tests/subscriptions/fail/subscriptions_cannot_implement_interfaces.stderr
error: couldn't read $DIR/tests/subscriptions/fail/../compile_pass/setup.rs: No such file or directory (os error 2)
 --> $DIR/subscriptions_cannot_implement_interfaces.rs:2:1
  |
2 | include!("../compile_pass/setup.rs");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
